--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,6 +52,7 @@ button:disabled {
 
 @media only screen and (max-width: 600px) {
     .jumbotron {
+        position: initial;
         margin: 0 auto;
         max-width: 100%;
     }
