--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!-- The content below is only a placeholder and can be replaced. -->
 <!-- Button trigger modal -->
 <!-- Button trigger modal -->
 <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
@@ -6,7 +6,16 @@
 </button> -->
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div 
+  class="modal fade"
+  id="exampleModalCenter" 
+  tabindex="-1" 
+  role="dialog" 
+  aria-labelledby="exampleModalCenterTitle" 
+  aria-hidden="true"
+  data-keyboard="false" 
+  data-backdrop="static"
+>
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -16,22 +25,27 @@
         </button>
       </div>
       <div class="modal-body">
-        <div *ngFor="let item of responseData">
-          <p>From: {{ item.from }}</p>
-          <p>Destination: {{ item.to }}</p>
-          <p>Company name: {{ item.company }}</p>
-          <p>Cost: {{ item.cost }}</p>
-          <p>Date: {{ item.date }}</p>
-          <hr/>
+        <div *ngIf="isLoaded && !errResponse">
+          <div *ngFor="let res of results">
+            <p>From: {{ originFull.charAt(0).toUpperCase() + originFull.slice(1) }}    {{ origin }}</p>
+            <p>Destination: {{ destinationFull.charAt(0).toUpperCase() + destinationFull.slice(1) }}    {{ res.destination }}</p>
+            <p>Company name: {{ res.airline }}</p>
+            <p>Cost: {{ res.price }} {{currency}}</p>
+            <p>Date: {{ res.departure_date }}</p>
+            <hr/>
+          </div>
         </div>
       </div>
-      <div class="modal-body modal-body-noData" *ngIf="!dataLength">
+      <div *ngIf="!isLoaded">
+        <p>Loading...</p>
+      </div>
+      <div class="modal-body modal-body-noData" *ngIf="errResponse">
         <p>No matches found</p>
         <p>Try changing search criteria</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="modal-button btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="modal-button btn btn-info" (click)="printPage()" [disabled]="!dataLength">Print results</button>
+        <button type="button" class="modal-button btn btn-secondary" data-dismiss="modal" (click)="modalClose()">Close</button>
+        <button type="button" class="modal-button btn btn-info" (click)="printPage()" [disabled]="errResponse">Print results</button>
       </div>
     </div>
   </div>
@@ -48,7 +62,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text">From</span>
           </div>
-          <input type="text" class="form-control" name="from" placeholder="..." required ngModel>
+          <input type="text" class="form-control" name="from" placeholder="..." required ngModel="Mumbai">
         </div>
       </div>
       <div class="form-group">
@@ -56,7 +70,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text">To</span>
           </div>
-          <input type="text" class="form-control" name="to" placeholder="..." required ngModel>
+          <input type="text" class="form-control" name="to" placeholder="..." required ngModel="Delhi">
         </div>
       </div>
       <div class="form-group">
@@ -64,7 +78,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text">Date</span>
           </div>
-          <input type="date" class="form-control" name="date" ngModel>
+          <input type="date" class="form-control" name="date" required ngModel>
         </div>
       </div>
       <button type="submit" class="btn btn-primary btn-block" data-toggle="modal" data-target="#exampleModalCenter" [disabled]="!searchForm.form.valid">
