--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,8 @@
       <div class="modal-body">
         <div *ngIf="isLoaded && !errResponse">
           <div *ngFor="let res of results">
-            <p>From:{{ origin }} {{ originFull }}</p>
-            <p>Destination: {{ res.destination }}</p>
+            <p>From: {{ originFull }}</p>
+            <p>Destination: {{ destinationFull }}</p>
             <p>Company name: {{ res.airline }}</p>
             <p>Cost: {{ res.price }} {{currency}}</p>
             <p>Date: {{ res.departure_date }}</p>
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div *ngIf="!isLoaded">
-        <p>Loading...</p>
+        <p>  Loading...</p>
       </div>
       <div class="modal-body modal-body-noData" *ngIf="errResponse">
         <p>No matches found</p>
@@ -58,7 +58,7 @@
 </div>
 
 <div class="jumbotron">
-  <h1 class="display-4">Search</h1>
+  <h1 class="display-4">Flight search</h1>
   <p class="lead">Here you can start your search</p>
   <hr class="my-4">
   <div class="form">
@@ -69,47 +69,29 @@
           <div class="input-group-prepend">
             <span class="input-group-text">From</span>
           </div>
-          <input type="text" class="form-control" name="from" placeholder="..." required (keyup)="keyPress($event, true)" ngModel="{{selectedFrom}}">
-          <select class="form-control"  (change)="onSelectFrom($event)">
-            <option *ngFor="let res of dynResultsFrom">{{ res.label }}</option>
-          </select>
+          <input type="text" class="form-control" name="from" placeholder="..." required (keyup)="keyPress($event, true)" ngModel="{{selectedFrom}}"/>
         </div>
+        <select class="form-control"  (change)="onSelectFrom($event)">
+          <option *ngFor="let res of dynResultsFrom" required>{{ res.label }}</option>
+        </select>
       </div>
-
       <div class="form-group">
         <div class="input-group mb-6">
           <div class="input-group-prepend">
             <span class="input-group-text">To</span>
           </div>
-          <input type="text" class="form-control" name="to" placeholder="..." required (keyup)="keyPress($event, false)" ngModel="{{selectedTo}}">
-          <select class="form-control"  (change)="onSelectTo($event)">
-            <option *ngFor="let res of dynResultsTo">{{ res.label }}</option>
-          </select>
+          <input type="text" class="form-control" name="to" placeholder="..." required (keyup)="keyPress($event)" ngModel="{{selectedTo}}"/>
         </div>
+        <select class="form-control"  (change)="onSelectTo($event)">
+          <option *ngFor="let res of dynResultsTo">{{ res.label }}</option>
+        </select>
       </div>
-
-      <!-- <div class="form-group">
-        <div class="input-group mb-6">
-          <div class="input-group-prepend">
-            <span class="input-group-text">From</span>
-          </div>
-          <input type="text" class="form-control" name="from" placeholder="..." required ngModel="thisssj">
-        </div>
-      </div> -->
-      <!-- <div class="form-group">
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">To</span>
-          </div>
-          <input type="text" class="form-control" name="to" placeholder="..." required ngModel>
-        </div>
-      </div> -->
       <div class="form-group">
         <div class="input-group mb-6">
           <div class="input-group-prepend">
             <span class="input-group-text">Date</span>
           </div>
-          <input type="date" class="form-control" name="date" required ngModel>
+          <input type="date" class="form-control" name="date" required ngModel/>
         </div>
       </div>
       <button type="submit" class="btn btn-primary btn-block" data-toggle="modal" data-target="#exampleModalCenter" [disabled]="!searchForm.form.valid">
