--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+/* @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500'); */
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
+body {
+    background-color: lightgrey;
+}
+
