--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,95 +1,37 @@
 
-.jumbotron {
-    position: relative;
-    top: 20vh;
-    margin: 0 auto;
-    max-width: 50%;
+.mat-icon {
+    vertical-align: bottom;
+    margin-right: 15px;
 }
-
-button:disabled {
-    cursor: not-allowed;
-}
-
-.modal-body-noData>p {
-    text-align: center;
-    color: rgb(255, 72, 0);
-}
-
-.form {
-    padding-top: 30px;
-    margin: 0 auto;
-    width: 90%;
-}
-
-.input-group-text {
-    min-width: 60px;
-}
-
-.modal-header .close {
-    display:none;
-}
-
-
-.modal.fade.show {
-    background-color: rgba(0, 0, 0, 0.5)
-}
-
-@media print {
-    .modal-button,.close {
-        display: none;
-    }
-
-    .modal-dialog {
-        max-width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-      
-    .modal-content {
-        height: auto;
-        min-height: 100%;
-        border-radius: 0;
-        border: none;
-    } 
-}
-
-@media only screen and (max-width: 600px) {
-    .jumbotron {
-        position: initial;
-        margin: 0 auto;
-        max-width: 100%;
-    }
-}
-
-
-
 .card {
     top: 20vh;
     margin: 0 auto;
     max-width: 80%;
 }
 
-
-
-mat-horizontal-stepper {
-    margin-top: 75px;
-}
-  
-.mat-card-header {
-    margin-bottom: 30px;
+.mat-card-content>:first-child, .mat-card>:first-child {
+    margin-top: 15px;
 }
 
-mat-form-field {
-    font-size: 14px;
+.mat-stepper-horizontal {
+    margin-top: 65px;
+}
+
+.summary-card {
+    padding-top: 1px;
+    background-color: #f6f6f6;
+    margin-bottom: 20px;
+}
+
+.mat-form-field {
     width: 450px;
 }
 
-mat-option {
+.mat-option {
     font-size: 14px;
 }
 
-.mat-list-item {
+input.mat-input-element {
     font-size: 14px;
 }
 
@@ -97,6 +39,10 @@ mat-option {
     margin-bottom: 20px;
 }
 
-.mat-icon-button, button {
+button {
     outline: none;
+}
+
+.mat-spinner {
+    margin: 0 auto;
 }
