--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -1,3 +1,21 @@
 button {
     outline: none;
 }
+
+.modal-header::children {
+ display: inline-block;
+}
+
+.mat-dialog-content {
+    max-height: 47vh;
+}
+
+h3 {
+    margin-bottom: 20px;
+}
+
+.mat-icon {
+    font-size: 36px;
+    /* vertical-align: text-top; */
+    margin-right: 15px;
+}
