--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,24 +1,24 @@
+<div class="modal-header">
+  <h3>Search results</h3>
+  <mat-icon>list</mat-icon>
+</div> 
+<mat-dialog-content>
+  <mat-divider></mat-divider>
+    <div *ngFor="let res of data.response.results">
+      <mat-icon>short_text</mat-icon>
+      <p>From: {{ data.response.origin }}</p>
+      <p>Destination: {{ res.destination }}</p>
+      <p>Company name: {{ res.airline }}</p>
+      <p>Cost: {{ res.price }} {{ data.response.currency }}</p>
+      <p>Date: {{ res.departure_date }}</p>
+      <mat-divider></mat-divider>
+    </div>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Back</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial disabled="true">Print</button>
+</mat-dialog-actions>    
 
-  <mat-dialog-content>
-    <h3>Search results</h3>
-    <mat-paginator [length]="100"
-                [pageSize]="10"
-                [pageSizeOptions]="[5, 10, 25, 100]">
-      <mat-list *ngFor="let res of data.response.results">
-        <mat-list-item>From: {{ data.response.origin }}</mat-list-item>
-        <mat-list-item>Destination: {{ res.destination }}</mat-list-item>
-        <mat-list-item>Company name: {{ res.airline }}</mat-list-item>
-        <mat-list-item>Cost: {{ res.price }} {{ data.response.currency }}</mat-list-item>
-        <mat-list-item>Date: {{ res.departure_date }}</mat-list-item>
-      </mat-list>
-    </mat-paginator>
-  </mat-dialog-content>
-    
-  <mat-dialog-actions>
-    <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>
-  </mat-dialog-actions>
-  
 
   <!-- <div class="modal-body modal-body-noData">
     <p>No matches found</p>
